# flask-stripe-checkout

./: .gitignore  README.md  pyproject.toml
example/: app.py
example/templates/: index.html
flask_stripe_checkout/: __init__.py  cart.py  cart_blueprint.py  subscription.py  webhooks.py
flask_stripe_checkout/templates/cart/: cart.html  cart_page.html  checkout_success.html  layout.html
